[project]
name = "tracker"
version = "0.1.0"
description = "Micro habits tracker"
readme = "README.md"
authors = [
    { name = "DanielBerns", email = "daniel.w.berns@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tracker = "tracker:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
